2007-01-18  Sascha L. Teichmann <sascha.teichmann@intevation.de>

	* src/de/intevation/printlayout/tools/PickingInteractor.java:
		- add a flag to indicate in point query only to result objects
		  which are directly embedded in the drawing sheet.
		- method to clear selection.

	* src/de/intevation/printlayout/DocumentManager.java:
		add method to build a group from a set of ids.
		the objects needs to be embedded directly in the drawing sheet-

	* src/de/intevation/printlayout/LayoutFrame.java:
		add a menu item to group selected items.

2007-01-18  Sascha L. Teichmann <sascha.teichmann@intevation.de>

	* src/de/intevation/printlayout/DocumentManager.java:
		has now a method to remove a set set of ids from DOM.

	* src/de/intevation/printlayout/LayoutFrame.java:
		added a menu item to remove selected items
		
	* src/de/intevation/printlayout/tools/PickingInteractor.java:
		inform listeners if during paint() of the overlay it is
		recognized that the selection is no longer valid.
		

2007-01-18  Sascha L. Teichmann <sascha.teichmann@intevation.de>

	* src/de/intevation/printlayout/tools/PickingInteractor.java:
		offers now a PickingListener interface. implementation
		can use it to get informed if selection changes.
		
	* src/de/intevation/printlayout/LayoutFrame.java:
		implements PickingListener interface.

2007-01-18  Sascha L. Teichmann <sascha.teichmann@intevation.de>

	* src/de/intevation/printlayout/LayoutFrame.java:
		query our interactors before other if they want to start.

	* src/de/intevation/printlayout/tools/PickingInteractor.java:
		enhance selection. unmodified clicks select only one object.
		click + <crtl> elongates current selection with object under
		Mouse. click + <shift> removes object under mouse from selection.

2007-01-18  Sascha L. Teichmann <sascha.teichmann@intevation.de>

	* src/de/intevation/printlayout/LayoutFrame.java:
		- reordered menus once again. "File", "Edit", "Insert"
		- added Close entry to File menu
	